samples/_failures_safe/1761521362_6cd764_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83c8f571.c: In function ‘main’:
./samples/SAFE/__tmp_83c8f571.c:109:16: error: expected ‘;’ at end of input
  109 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_83c8f571.c:109:9: error: expected declaration or statement at end of input
  109 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_83c8f571.c:109:9: error: expected declaration or statement at end of input
